# Kinect-Mouse

./: CMakeLists.txt  Makefile  README  finger.cpp  kinect_mouse.c  kinect_touch.cpp
Mouse-ntk/: CMakeLists.txt  README  demo.cpp
original source files/: KinectSampleSource.rar  KinectTouchSource.rar  evemu.h  finger.cpp.gus  glview.c  kinect_mouse.c.orig
original source files/FingertipTuio3d/: FingertipTuio3d.vcxproj  FingertipTuio3d.vcxproj.filters  Kinect.h  OpenCV.h
original source files/utouch-evemu-1.0.5/: ChangeLog  INSTALL  Makefile.am  Makefile.in  README  configure  configure.ac  utouch-evemu.pc.in
original source files/utouch-evemu-1.0.5/src/: Makefile.am  Makefile.in  evemu-impl.h  evemu.c
original source files/utouch-evemu-1.0.5/tools/: Makefile.am  Makefile.in  evemu-describe.1  evemu-describe.c  evemu-device.1  evemu-device.c  evemu-echo.c  evemu-play.1  evemu-play.c  evemu-record.1  evemu-record.c
